# causal-policy-evaluation

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md
report/: PHASE_1_BASELINE.md  PHASE_2_RESEARCH_GRADE_INFRASTRUCTURE.md  PHASE_3_ECONOMIC_EXTENSIONS.md  PHASE_4_NATIONAL_PANEL.md  PHASE_5_TRADE_SHIFT_SHARE.md  PHASE_6_SPATIAL_RDD.md  PHASE_7_REGIONAL_CYCLE_CONTROLS.md  WRITEUP.md  balance_table.csv  border_pair_did.csv  cluster_diagnostics.csv  event_study_coefficients.csv  iv_2sls.csv  iv_first_stage.txt  joint_pretrend_test.csv  manifest.json  national_balance_table.csv  national_bite_dose_response.csv  national_cluster_diagnostics.csv  national_event_study_coefficients.csv  national_heterogeneity.csv  national_joint_pretrend_test.csv  national_margin_decomposition.csv  national_parallel_trends_preperiod.csv  national_pyfixest_lpdid.csv  national_raw_trends.csv  national_specification_curve.csv  national_spillover_identification.csv  parallel_trends_preperiod.csv  phase2_bite_dose_response.csv  phase2_heterogeneity.csv  phase2_margin_decomposition.csv  phase2_specification_curve.csv  placebo_policy_years.csv  policy_fred_missing_states.txt  policy_validation.csv  pyfixest_lpdid.csv  raw_trends.csv  regional_activity_surprise_heterogeneity.csv  regional_control_coverage.csv  (+6 more)
scripts/: build_border_pairs.py  build_national_panel.py  fetch_data.py  fetch_policy_fred.py  render_report.py  run_all.py  run_diagnostics.py  run_did.py  run_event_study.py  run_iv.py  run_national_findings.py  run_regional_control_specs.py  (+6 more)
(+21 files in other folders)
