[build-system]
requires = ["setuptools==70.3.0", "wheel==0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-policy-evaluation"
version = "0.1.0"
description = "Quasi-experimental evaluation of US minimum-wage policy using public data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kartik Munjal" }]
license = { text = "MIT" }
dependencies = [
  "pandas==2.2.2",
  "numpy==1.26.4",
  "scipy==1.13.1",
  "requests==2.32.3",
  "matplotlib==3.9.1",
  "statsmodels==0.14.2",
  "linearmodels==6.0",
  "pyfixest==0.26.2",
  "pysyncon==1.5.1",
  "pyarrow==16.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
